Fixed some layout issues (again) on the skills page

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -178,7 +178,6 @@ article div.images div p
 	/* Ajustement de la position de la légende */
 	padding: 1rem;
 	word-break: break-word;
-	text-align: center;
 }
 
 /* ------------------------ */
